Published documentation: GNU philosophy

--- a/curriculum.html
+++ b/curriculum.html
@@ -187,6 +187,24 @@ license: CC BY-ND 4.0
 	  </table>
 
 	  <table>
+	    <caption>Published Documentation</caption>
+	    <thead>
+	      <tr>
+		<th>Project</th>
+		<th>Skills</th>
+              </tr>
+	    </thead>
+	    <tbody>  
+              <tr>
+		<td><a href="http://oitofelix.github.io/gnu-philosophy/">
+		GNU philosophy</a></td>
+		<td>Texinfo, Unifont, ImageMagick, PO4A, Autoconf, M4,
+		Automake, Make, Bash, Emacs</td>
+              </tr>
+	    </tbody>
+	  </table>
+
+	  <table>
 	    <caption>Published Articles</caption>
 	    <thead>
 	      <tr>
