--- a/curriculum.html
+++ b/curriculum.html
@@ -205,7 +205,7 @@ license: CC BY-ND 4.0
 	  </table>
 
 	  <table>
-	    <caption>Published Articles</caption>
+	    <caption>Published Papers</caption>
 	    <thead>
 	      <tr>
 		<th>Project</th>
