Published presentation: TLS: Libre Software

--- a/curriculum.html
+++ b/curriculum.html
@@ -205,6 +205,24 @@ license: CC BY-ND 4.0
 	  </table>
 
 	  <table>
+	    <caption>Published Presentations</caption>
+	    <thead>
+	      <tr>
+		<th>Project</th>
+		<th>Skills</th>
+              </tr>
+	    </thead>
+	    <tbody>  
+              <tr>
+		<td><a href="http://oitofelix.github.io/presentation-tls-libre-software/">
+		  TLS: Libre Software</a></td>
+		<td>LibreOffice Impress, Free software movement
+		  philosophy and history</td>
+              </tr>
+	    </tbody>
+	  </table>
+
+	  <table>
 	    <caption>Published Papers</caption>
 	    <thead>
 	      <tr>
